Updated config usun autocong plus headers

--- a/changelog
+++ b/changelog
@@ -2,6 +2,9 @@ dct (1.2.05) stable
  * Removed Gzip command
  * Added cleanup
  * Added create root folders functionality on first run
+ * Added check for Tar and Zip in configure
+ * Configure rebuilt using latest autotools
+ 
  * TODO: Check for exisiting folders and move them as needed
          Changing directory to the projects directory before compression
          
