--- a/changelog
+++ b/changelog
@@ -8,4 +8,4 @@ dct (1.2.05) stable
  * TODO: Check for exisiting folders and move them as needed
          Changing directory to the projects directory before compression
          
- -- Scott Cilley <scilley@devworksosi.com> Sun, 30 Jul 2017 10:49:05 +0200
+ -- Scott Cilley <scilley@devworksosi.tech> Sun, 30 Jul 2017 10:49:05 +0200
